SERVER-72285 currentOp with $tenant should see ops for same tenant